Fix alignment

--- a/src/components/LeakedPasswordList/LeakedPasswordList.module.scss
+++ b/src/components/LeakedPasswordList/LeakedPasswordList.module.scss
@@ -7,6 +7,7 @@
 .LeakedPasswordList__headerRow {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom: $default-border;
 }
 
